--- a/app/src/main/res/layout/learn_pitch.xml
+++ b/app/src/main/res/layout/learn_pitch.xml
@@ -197,7 +197,8 @@
 
 
     </LinearLayout>
-
+    <!--android:layout_width="@dimen/keyboard_black_width"
+    android:layout_height="@dimen/keyboard_black_height"-->
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/piano_height"
@@ -206,11 +207,7 @@
         android:orientation="horizontal"
         android:paddingLeft="50dp"
         android:paddingRight="50dp">
-        <ImageView
-            android:layout_width="@dimen/keyboard_black_width"
-            android:layout_height="150dp"
-            android:src="@android:color/black"
-            />
+
 
     </RelativeLayout>
 </RelativeLayout>
