--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="pitch_margin_top">20dp</dimen>  //height/5
-    <dimen name="pitch_margin_top_2">21dp</dimen>  //pitch_margin_top+2
-    <dimen name="pitch_height">100dp</dimen>
+    //height/5
+    <dimen name="pitch_margin_top_2">61dp</dimen>
+    //pitch_margin_top+2
 
 
-    <dimen name="keyboard_margin">125dp</dimen>
-    <dimen name="piano_height">240dp</dimen>
-    <dimen name="keyboard_black_width">46dp</dimen>
-    <dimen name="keyboard_black_height">150dp</dimen>
+    <dimen name="out_padding">55dp</dimen>
 </resources>
